fix: overflow in homepage

--- a/src/components/product Category/product Category.css
+++ b/src/components/product Category/product Category.css
@@ -1,7 +1,7 @@
-section{
+.section{
  background-color: #260c0e;
- margin-bottom: 1rem;
-
+padding-bottom: 2rem;
+ padding-top: 0.5rem;
 }
 .componentTitle{
  font-family: 'Playfair Display';
