--- a/src/pages/PredictValue/PredictValue.css
+++ b/src/pages/PredictValue/PredictValue.css
@@ -1,9 +1,10 @@
 .pdv {
   height: 97.5vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: none;
+  float: none;
 }
 
 .recImage {
